--- a/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -7,8 +7,14 @@
 
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
+
 <div class="row">
-    <div class="col-md-6">
+    <button id="edit" class="btn-primary col-sm-1 offset-10" >Edit</button>
+</div>
+@*Edit*@
+@*This part is auto generated*@
+<div id="editvisible" class="row hidden">
+    <div class="col-md-7">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -16,7 +22,7 @@
                 <label asp-for="Username" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
+                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
@@ -25,6 +31,140 @@
     </div>
 </div>
 
+<section class="teachers_profile">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 teacher-detail-left">
+                <div class="teacher_info_wrapper">
+                    <div class="teacger-image">
+                        <img src="images/team/team_1.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="social_wraper">
+                        <ul class="social-items d-flex list-unstyled">
+                            <li><a href="#"><i class="fab fa-facebook-f fb-icon"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter twitt-icon"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in link-icon"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram ins-icon"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="teacher-skills">
+                        <div class="skill-single">
+                            <span>HTML - <span class="skills_lavel">80%</span></span>
+                            <span><span style="width:80%;"></span></span>
+                        </div>
+                        <div class="skill-single">
+                            <span>Wordpress - <span class="skills_lavel">70%</span></span>
+                            <span><span style="width:70%;"></span></span>
+                        </div>
+                        <div class="skill-single">
+                            <span>Photoshop - <span class="skills_lavel">90%</span></span>
+                            <span><span style="width:90%;"></span></span>
+                        </div>
+                        <div class="skill-single">
+                            <span>CSS3 - <span class="skills_lavel">75%</span></span>
+                            <span><span style="width:75%;"></span></span>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- Ends: .teacher-detail-left -->
+            <div class="col-sm-8 teacher-detail-right">
+                <div class="row">
+                    <div class="col-sm-10">
+                        <div class="teacher-info">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <h3>Name :</h3>
+                                    <span>John Doe, M.Sc, M.Phil</span>
+                                </li>
+                                <li>
+                                    <h3>Department :</h3>
+                                    <span>Web Design & Development</span>
+                                </li>
+                                <li>
+                                    <h3>Experience :</h3>
+                                    <span>5 Years of Teaching Career</span>
+                                </li>
+                                <li>
+                                    <h3>Language :</h3>
+                                    <span>English, French, Italic, Arabic</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="courses_details_nav_tabs">
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item"><a class="nav-link active" href="#information" role="tab" data-toggle="tab"><i class="flaticon-info-sign"></i>About Insructor</a></li>
+                <li class="nav-item"><a class="nav-link" href="#curricularm" role="tab" data-toggle="tab"><i class="flaticon-portfolio"></i>Qualification</a></li>
+                <li class="nav-item"><a class="nav-link" href="#courses" role="tab" data-toggle="tab"><i class="flaticon-portfolio"></i>Courses</a></li>
+            </ul>
+        </div>
+
+        <div class="tab_contents tab-content">
+            <div role="tabpanel" class="tab-pane fade in active show" id="information">
+                <p>iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="curricularm">
+                <p>"Lorem ipsum idunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="courses">
+                <!--Start Courses Area Section-->
+                <div class="popular_courses">
+                    <div class="row">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+                            <div class="single-courses">
+                                <div class="courses_banner_wrapper">
+                                    <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                                    <div class="purchase_price">
+                                        <a href="#" class="read_more-btn">$150</a>
+                                    </div>
+                                </div>
+                                <div class="courses_info_wrapper">
+                                    <div class="courses_title">
+                                        <h3><a href="#">Make Better Decisions</a></h3>
+                                        <div class="teachers_name">Teacher - <a href="#" title="">Jhonthan Smith</a></div>
+                                    </div>
+                                    <div class="courses_info">
+                                        <ul class="list-unstyled">
+                                            <li><i class="fas fa-user"></i>180 Days</li>
+                                            <li><i class="fas fa-calendar-alt"></i>30 Students</li>
+                                        </ul>
+                                        <a href="#" class="cart_btn">Add to Cart</a>
+                                    </div>
+                                </div>
+                            </div><!-- Ends: .single courses -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+</section>
+
+
+
+
+
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script>
+    var show = document.getElementById("editvisible")
+    var menu = document.getElementById("navmenu")
+    
+    document.getElementById("edit").addEventListener( "click", () => {
+        show.classList.remove("hidden")
+        menu.classList.remove("hidden")
+
+    })
+</script>
