--- a/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -12,13 +12,13 @@
 <h1>Manage your account</h1>
 
 <div>
-    <h2>Change your account settings</h2>
+    @*<h2>Change your account settings</h2>*@
     <hr />
     <div class="row">
-        <div class="col-md-3">
+        <div id="navmenu" class="col-md-3">
             <partial name="_ManageNav" />
         </div>
-        <div class="col-md-9">
+        <div class="col-md-12">
             @RenderBody()
         </div>
     </div>
